[FIX] bug in dashboard "my cases" widget whe case subject is too big

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -1891,6 +1891,17 @@ td.td-bottom-multiselect .btn-group {
 
 
 /***********************************STARTPAGE***************************/
+.cases.portlet table
+{
+    table-layout: fixed;
+}
+.cases.portlet table th,
+.cases.portlet table td
+{
+    overflow-wrap:break-word;
+    word-wrap: break-word;
+}
+
 .start-tile {
     margin-left: 10px;
     padding: 5px;
